--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-icons": "^1.10.5",
     "bootstrap-vue": "^2.23.1",
     "pinia": "^2.0.35",
+    "posthog-js": "^1.75.0",
     "vue": "^3.3.4",
     "vue-router": "^4.1.6"
   },
